# GhostEscape

./: .gitignore  CMakeLists.txt  README.md
assets/: credits.txt
lib/SDL3_image/: libSDL3_image.so.0.2.0
lib/SDL3_mixer/: libSDL3_mixer.so.0.0.0
lib/SDL3_ttf/: libSDL3_ttf.so.0.2.0
src/: Game.cpp  Game.h  main.cpp  scene_main.cpp  scene_main.h
src/core/: Game.cpp  Game.h  Object.h  Scene.h
